// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<JobStatusIcon /> > should render when [pad=%p] false > and [state=%p] cancelled 1`] = `
<Fragment>
  <JobStateIcon
    state="cancelled"
  />
  <span>
    Cancelled
  </span>
</Fragment>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] false > and [state=%p] complete 1`] = `
<Fragment>
  <JobStateIcon
    state="complete"
  />
  <span>
    Complete
  </span>
</Fragment>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] false > and [state=%p] error 1`] = `
<Fragment>
  <JobStateIcon
    state="error"
  />
  <span>
    Error
  </span>
</Fragment>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] false > and [state=%p] preparing 1`] = `
<Fragment>
  <Loader
    color="blue"
    size="14px"
  />
  <span>
    Preparing
  </span>
</Fragment>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] false > and [state=%p] running 1`] = `
<Fragment>
  <Loader
    color="blue"
    size="14px"
  />
  <span>
    Running
  </span>
</Fragment>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] false > and [state=%p] waiting 1`] = `
<Fragment>
  <JobStateIcon
    state="waiting"
  />
  <span>
    Waiting
  </span>
</Fragment>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] true > and [state=%p] cancelled 1`] = `
<Fragment>
  <JobStateIcon
    state="cancelled"
  />
  <span>
    Cancelled
  </span>
</Fragment>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] true > and [state=%p] complete 1`] = `
<Fragment>
  <JobStateIcon
    state="complete"
  />
  <span>
    Complete
  </span>
</Fragment>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] true > and [state=%p] error 1`] = `
<Fragment>
  <JobStateIcon
    state="error"
  />
  <span>
    Error
  </span>
</Fragment>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] true > and [state=%p] preparing 1`] = `
<Fragment>
  <Loader
    color="blue"
    size="14px"
  />
  <span>
    Preparing
  </span>
</Fragment>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] true > and [state=%p] running 1`] = `
<Fragment>
  <Loader
    color="blue"
    size="14px"
  />
  <span>
    Running
  </span>
</Fragment>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] true > and [state=%p] waiting 1`] = `
<Fragment>
  <JobStateIcon
    state="waiting"
  />
  <span>
    Waiting
  </span>
</Fragment>
`;
